# docs/swagger.json
@@ -449,6 +449,10 @@
                 "id": {
                     "type": "integer"
                 },
+                "scaled_score": {
+                    "description": "Điểm đã quy đổi",
+                    "type": "number"
+                },
                 "status": {
                     "type": "string"
                 },
@@ -461,7 +465,8 @@
                 "test_title": {
                     "type": "string"
                 },
-                "total_score": {
+                "total_raw_score": {
+                    "description": "Điểm thô",
                     "type": "number"
                 },
                 "user_id": {
@@ -493,6 +498,10 @@
                 "id": {
                     "type": "integer"
                 },
+                "scaled_score": {
+                    "description": "Điểm đã quy đổi",
+                    "type": "number"
+                },
                 "status": {
                     "type": "string"
                 },
@@ -502,7 +511,8 @@
                 "test_id": {
                     "type": "integer"
                 },
-                "total_score": {
+                "total_raw_score": {
+                    "description": "Điểm thô",
                     "type": "number"
                 },
                 "user_id": {
@@ -566,18 +576,20 @@
                     "type": "string"
                 },
                 "has_attempted_by_user": {
-                    "description": "True if the specified user has at least one attempt for this test. Omit if no user_id provided.",
                     "type": "boolean"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "last_attempt_score": {
-                    "description": "Score of the user's most recent attempt, if any.",
+                "last_attempt_raw_score": {
+                    "description": "Đổi tên TotalScore thành RawScore",
+                    "type": "number"
+                },
+                "last_attempt_scaled_score": {
+                    "description": "Thêm điểm quy đổi",
                     "type": "number"
                 },
                 "last_attempt_status": {
-                    "description": "Status of the user's most recent attempt, if any.",
                     "type": "string"
                 },
                 "question_count": {
